Fixes... TODO: find packet to teleport spawnpoint to right location TODO: correctly sync entity held items and interactions